

*lh-sources-3.9.6-r1 (15 Jun 2013)

  15 Jun 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.6-r1.ebuild:
  Bump to BFQ-6-r2

*lh-sources-3.9.6 (14 Jun 2013)

  14 Jun 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.6.ebuild:
  Bump to latest genpatches

  12 Jun 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.9.5.ebuild:
  Moved BFQ patch into an array

  11 Jun 2013; Justin Lecher <jlec@gentoo.org> -lh-sources-3.8.4.ebuild,
  -lh-sources-3.8.5.ebuild, -lh-sources-3.8.5-r1.ebuild,
  -lh-sources-3.8.6.ebuild, -lh-sources-3.8.7.ebuild, -lh-sources-3.8.8.ebuild,
  -lh-sources-3.8.10.ebuild, -lh-sources-3.9.0.ebuild,
  -lh-sources-3.9.0-r1.ebuild, -lh-sources-3.9.1.ebuild,
  -lh-sources-3.9.1-r1.ebuild, -lh-sources-3.9.2.ebuild,
  -lh-sources-3.9.3.ebuild, -lh-sources-3.9.4.ebuild, lh-sources-3.9.5.ebuild:
  Drop old; fix quoting

*lh-sources-3.9.5 (09 Jun 2013)

  09 Jun 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.5.ebuild:
  Bump to latest genpatches

*lh-sources-3.9.4 (26 May 2013)

  26 May 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.4.ebuild:
  Bump to latest genpatches

*lh-sources-3.9.3 (20 May 2013)

  20 May 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.3.ebuild:
  Bump to latest genpatches and aufs3 release

*lh-sources-3.9.2 (12 May 2013)

  12 May 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.2.ebuild:
  Bump to linux-3.9.2 and official bfq patches

  10 May 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.9.1.ebuild,
  +lh-sources-3.9.1-r1.ebuild:
  Fix to new genpatch releases

*lh-sources-3.9.1-r1 (10 May 2013)

  10 May 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.9.1.ebuild,
  +lh-sources-3.9.1-r1.ebuild:
  Fix to new genpatch releases

*lh-sources-3.9.1 (09 May 2013)

  09 May 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.1.ebuild:
  Bump to linux-3.9.1

*lh-sources-3.9.0-r1 (07 May 2013)

  07 May 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.0-r1.ebuild: