@@ -9,6 +9,8 @@ DIST deblob-3.9 116031 SHA256 0fb17070d5aaf226fca39f70df68b7d482e4f803e0ef974626
 DIST deblob-check-3.9 557345 SHA256 60d05db20e7b50919ca44487d05e8faa9cca830318bd8d96625f0f75b252eeed SHA512 6b857380d495261c4d356639157f99f3ca3412388fd3b1c72b566c3bb6453c5a22ab7716e3b24e64a9b63dab912b07baccccfd0fca806ac0e0620efeef777b6a WHIRLPOOL 877c2c9b813466f9aa5cfecdc9ab93247bd2cdead457c9e0bd97da49d042d0a52262f9b4f8e9c83e397b57c5bb5a8fe2b61bb5f44d5a178a579cc9fff990941a
 DIST genpatches-3.9-10.base.tar.xz 175032 SHA256 70fdd2a3019b01be0aea5b09aa3ca03a2af0ea0240da1a5345e4ba047ea8314c SHA512 af831b5c6ca860292be6d10ddd394dbaa7edb4193c6f1f4f2813a8605a6e71d31cfa2398116cc38e049448d372d95851717b1d58fb7634e4161601b768b03dcd WHIRLPOOL f55f3d3fa25d15764d549293abeb2606f94c3f8bcaae5bc5f8cb7df15609e0db54dfc1a658bc80f5212d70bd1000f4fde75e73877b533415a7c5c7553e668ea6
 DIST genpatches-3.9-10.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
+DIST genpatches-3.9-12.base.tar.xz 235956 SHA256 ab9ec774a9221c327ecc106cbf3a52e163166cd4a8ed55b77c49a339373b2f80 SHA512 309dd9861e0de034cf485c2d16f12ff040b44974f6ba1d1b804bb249617b797fcfacbc0eeca85af65cffc89f00f5c741270a2668fdad2686916a139d20b31f43 WHIRLPOOL b18390e8c8a68f865e7ae924077284396ad8dcf03a938d9116ab57d38993952d2b3aeb253d34c979cdf4cd4a3d98bd80cc4e9c3b653c95cf5bb8229a062fe77d
+DIST genpatches-3.9-12.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
 DIST genpatches-3.9-9.base.tar.xz 155404 SHA256 db446d34c2d6c64da36e4196a3dd98424006b6abad3bcb3382b36d6380e41508 SHA512 7199a17e251ba6b71ed7d63a1ea57cec8c601b49e7f4f5559d1ab12ae57147fea2bd971af653dd7120f66804accec6d7281b9ea3891d80af5387b0a487d79f72 WHIRLPOOL 5971198fb42661599879e9c0cb9b034897c7e154efd0a8c95e9d1296f62bdc61747ac979cad6f9201c1c342c5a155a5041dac4591f2329c11a51a3685789f860
 DIST genpatches-3.9-9.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
